# abhi7

./: .gitignore  README.md  _middleware.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
app/: globals.css  layout.tsx
app/api/mentor/: route.ts
app/api/sync-all/: route.ts
app/dashboard/: page.tsx
app/login/: page.tsx
app/mentor/: page.tsx
app/problems/: page.tsx
app/settings/: page.tsx
components/: ThemeToggle.tsx  layout-shell.tsx  theme-toggle-placeholder.tsx
docs/: ROADMAP.md
lib/supabase/: client.ts
src/project_starter/: __init__.py  main.py
tests/: test_main.py
