[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-starter"
version = "0.1.0"
description = "A simple starter project scaffold"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Project Owner" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
project-starter = "project_starter.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
